# cg-hw-cgame-of-life

./: CMakeLists.txt  ColorRGB.cpp  Framebuffer.cpp  Framebuffer.h  README.md  Vertex2.h  main.cpp
